# mpl-theme-tweaker

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/workflows/: build.yml
pyinstaller/: hook-mpl_theme_tweaker.py  mpl-theme-tweaker.spec  packaging.README.md  packaging.README.zh.md
src/mpl_theme_tweaker/: app_state.py  app_utils.py  figure.py  figure_window.py  mpl_utils.py  opengl.py  params_window.py  translation.py
src/mpl_theme_tweaker/assets/locale/en/LC_MESSAGES/: messages.mo
src/mpl_theme_tweaker/assets/locale/zh_CN/LC_MESSAGES/: messages.mo
src/mpl_theme_tweaker/image_combo/: __init__.py  image_combo.py
src/mpl_theme_tweaker/mpl_entry/: mpl_entry.py  section.py
src/mpl_theme_tweaker/style_manager/: __init__.py  style_manager.py
